bug de z-index

--- a/less/filvina2017.less
+++ b/less/filvina2017.less
@@ -95,7 +95,6 @@ body#filvina-2017 .container_16 .grid_12 {
 
 body#filvina-2017 .filsa-header {
 	margin-bottom:24px;
-	z-index:-10;
 	img {
 		max-width:100%;
 	}
@@ -107,6 +106,11 @@ body#filvina-2017 {
 	#sidebar_interior ul li ul.sub-menu {
 		display:block;
 	}
+}
+
+body#filvina-2017 .camara-header-filsa {
+	box-shadow:none;
+	border-bottom:1px solid #ccc;
 }
 
 body#filvina-2017 .camara-header-filsa,
